<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Starbucks</string>
    <string name="sb_main_menu_home_text">Inicio</string>
    <string name="sb_main_menu_wallet_text">Tarjetas</string>
    <string name="sb_main_menu_shops_text">Ordenar</string>
    <string name="sb_main_menu_gifts_text">Regalos</string>
    <string name="sb_main_menu_settings_text">Ajustes</string>
    <string name="sb_text_understood">Entendido</string>
    <string name="sb_text_error">Atención</string>
    <string name="sb_text_notice">Aviso</string>
    <string name="sb_text_cancel">Cancelar</string>
    <string name="sb_text_optional_bracket">(Opcional)</string>
    <string name="sb_invalid_email">El correo no es válido.</string>
    <string name="sb_empty_email_error">El campo es obligatorio</string>
    <string name="sb_empty_pw_error">El campo es obligatorio</string>
    <string name="sb_text_ok">OK</string>
    <string name="sb_text_yes">Sí</string>
    <string name="sb_text_delete">Eliminar</string>
    <string name="sb_text_required_field">El campo es obligatorio</string>
    <string name="sb_text_expire_on">Expira %1$s a las %2$s</string>
    <string name="sb_text_expire_date">Expira: %1$s</string>
    <string name="sb_text_amount">Monto</string>
    <string name="sb_text_card_mask" translatable="false">•••• •••• •••• %1$s</string>
    <string name="sb_text_edit">Editar</string>
    <string name="sb_text_confirm">Confirmar</string>
    <string name="sb_text_field_required">El campo es obligatorio</string>
    <string name="sb_dots_separator" translatable="false">...............................................................</string>
    <string name="sb_text_message">MENSAJE</string>
    <string name="sb_error_internet_connection">No se detectó una conexión a internet válida.</string>
    <string name="sb_error_invalid_token">La sesión ha expirado. Debe volver a ingresar</string>
    <string name="sb_label_terms_and_conditions">Términos y condiciones</string>
    <string name="sb_welcome_customer">Bienvenido (a) ☕</string>
    <string name="sb_customer_sign_in_button">Ingresar</string>
    <string name="sb_customer_inbox_button">Inbox</string>
    <string name="sb_customer_stores_button">Tiendas</string>
    <string name="sb_customer_starbucks_rewards_title" translatable="false">STARBUCKS REWARDS&#8482;</string>
    <string name="sb_customer_join_button">Únete</string>
    <string name="sb_client_profile_button">Perfil</string>
    <string name="sb_client_rewards_button">Rewards</string>
    <string name="sb_client_rewards_details">Detalle de beneficios</string>
    <string name="sb_client_stars_required_for_gold">Estrellas para nivel Gold</string>
    <string name="sb_client_stars_maintain_gold">para mantener Gold</string>
    <string name="sb_client_stars_required_for_next_reward">Estrellas para la siguiente recompensa</string>
    <string name="sb_client_stars_expire">Nivel %1$s expira el %2$s</string>
    <string name="sb_client_greeting_good_morning">Buenos días %1$s</string>
    <string name="sb_client_greeting_good_afternoon">Buenas tardes %1$s</string>
    <string name="sb_client_greeting_good_evening">Buenas tardes %1$s</string>
    <string name="sb_client_greeting_good_evening_two">Buenas noches %1$s</string>
    <string name="sb_client_greeting_good_night">Buenas noches %1$s</string>
    <string name="sb_client_cash_in_button">Recargar</string>
    <string name="sb_client_cash_out_button">Pagar %1$s</string>
    <string name="sb_client_pay_button">Pago en tiendas</string>
    <string name="sb_inbox_title">Inbox</string>
    <string name="sb_inbox_empty_subtitle">No hay mensajes nuevos</string>
    <string name="sb_inbox_empty_description">Pronto recibirás información sobre ofertas de temporada, nuevas bebidas y promociones</string>
    <string name="sb_inbox_read_now_button">Leer ahora</string>
    <string name="sb_inbox_delete_all_confirm">¿Desea eliminar todos los mensajes?</string>
    <string name="sb_register_title">Regístrate</string>
    <string name="sb_register_personal_info_subtitle">Información personal</string>
    <string name="sb_register_first_name_hint">Nombre</string>
    <string name="sb_register_first_surname_hint">Apellido</string>
    <string name="sb_register_second_surname_hint">Segundo apellido</string>
    <string name="sb_register_dni_hint">DNI o C.E.</string>
    <string name="sb_register_security_subtitle">Seguridad</string>
    <string name="sb_register_email_hint">Correo electrónico</string>
    <string name="sb_register_pw_hint">Contraseña</string>
    <string name="sb_register_pw_invalid">Contraseña inválida</string>
    <string name="sb_register_enter_starbucks_rewards_subtitle">Ingresa a Starbucks Rewards&#8482;</string>
    <string name="sb_register_enter_starbucks_rewards_description">Puedes usar tu tarjeta de Starbucks para ganar bebidas y productos de cortesía, obtener recargas, pagar con el teléfono y más.</string>
    <string name="sb_register_radio_receive_digital_card">Quiero recibir una Starbucks Card digital instantánea</string>
    <string name="sb_register_radio_join_existent_card">Quiero unirme con una Starbucks Card que ya tengo</string>
    <string name="sb_register_starbucks_rewards_card_number_hint">Número de Starbucks Card</string>
    <string name="sb_register_security_code_hint">Código de seguridad</string>
    <string name="sb_register_birthday_subtitle">Cumpleaños</string>
    <string name="sb_register_birthday_description">Agrega tu fecha de cumpleaños para otorgarte un cupón de bebida gratis en el mes de tu cumpleaños.</string>
    <string name="sb_register_birthday_month">Mes</string>
    <string name="sb_register_birthday_day">Día</string>
    <string name="sb_register_preferences_and_terms_subtitle">Términos de uso</string>
    <string name="sb_register_marketing_check">Autorizo el envío de promociones personalizadas y ofertas especiales, así como que se me informe sobre las marcas, productos y eventos de STARBUCKS</string>
    <string name="sb_register_accept_terms_check">Acepto el tratamiento de mis datos personales bajo las condiciones de la</string>
    <string name="sb_register_accept_terms_check_link"><u>Declaración de Privacidad</u></string>
    <string name="sb_register_accept_terms_description">Al convertirme en miembro estoy aceptando los términos y condiciones de Starbucks Rewards&#8482; y Aviso de Privacidad</string>
    <string name="sb_register_terms_of_use_link">Términos de uso</string>
    <string name="sb_register_privacy_policy">Política de privacidad</string>
    <string name="sb_register_rewards_button">Regístrate en Rewards</string>
    <string name="sb_register_save_button">Guardar</string>
    <string-array name="sb_register_pss_requirements">
        <item>Entre 8 y 25 caracteres</item>
        <item>Al menos un número</item>
        <item>Al menos una letra mayúscula</item>
        <item>Al menos una letra minúscula</item>
        <item>Al menos un carácter especial</item>
        <item>Sin espacio, tabulador o línea</item>
    </string-array>
    <string-array name="sb_register_empty_field_error">
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
        <item>El campo es obligatorio</item>
    </string-array>
    <string name="sb_register_invalid_dni">El campo debe contener 8 dígitos</string>
    <string name="sb_stores_title">Tiendas</string>
    <string name="sb_stores_filter">Filtro</string>
    <string name="sb_stores_shops_filter">Filtro de tiendas</string>
    <string name="sb_stores_schedule_filter">HORARIO</string>
    <string name="sb_stores_channels_filter">CANALES DE COMPRA</string>
    <string name="sb_stores_services_filter">SERVICIOS</string>
    <string name="sb_stores_restart_filters_button">Reiniciar</string>
    <string name="sb_stores_apply_filters_button">Aplicar</string>
    <string name="sb_stores_search_hint">Introduzca un sitio</string>
    <string name="sb_stores_search_suggestions">SUGERENCIAS</string>
    <string name="sb_stores_search_not_found_places">No se encontraron tiendas</string>
    <string name="sb_stores_near">CERCA DE TI</string>
    <string name="sb_stores_show_list">Ver lista de tiendas</string>
    <string name="sb_stores_directions">Direcciones</string>
    <string name="sb_stores_title_not_found_places">NO SE ENCONTRARON TIENDAS</string>
    <string name="sb_stores_description_not_found_places">Prueba quitar algunos filtros y asegúrate de que tu búsqueda es ingresada correctamente</string>
    <string name="sb_store_distance_from_you">%1$s lejos de ti</string>
    <string name="sb_store_open_until">Abierto hasta las %1$s</string>
    <string name="sb_store_close_until">Cerrado hasta las %1$s</string>
    <string name="sb_store_open_all_day">Abierto las 24 horas</string>
    <string-array name="sb_store_services_filter">
        <item tools:ignore="Typos">Delivery</item>
        <item tools:ignore="Typos">Pickup</item>
        <item tools:ignore="Typos">Auto Starbucks</item>
        <item tools:ignore="Typos">Drive Thru</item>
    </string-array>
    <string name="sb_store_feature_parking">Estacionamiento</string>
    <string name="sb_store_feature_drivethru">Auto Starbucks</string>
    <string name="sb_store_feature_pickup">Pickup Online</string>
    <string name="sb_store_feature_delivery">Delivery</string>
    <string name="sb_store_feature_wifi">WiFi</string>
    <string name="sb_store_feature_mall">Centro Comercial</string>
    <string name="sb_store_feature_rewards">Starbucks Rewards</string>
    <string name="sb_store_channel_delivery">Delivery</string>
    <string name="sb_store_channel_pickup">Pickup</string>
    <string name="sb_store_channel_express">Express</string>
    <string name="sb_store_channel_curbdside">Curbside</string>
    <string name="sb_store_channel_autostarbucks">Auto Starbucks</string>
    <string name="sb_store_permission_rationale_title">Comparte tu ubicación en Ajustes</string>
    <string name="sb_store_permission_rationale_description">Parece que no compartiste tu ubicación, o se encuentra desactivada. Comparte tu ubicación para continuar disfrutando de la mejor experiencia.</string>
    <string name="sb_store_permission_rationale_not_now">Ahora no</string>
    <string name="sb_store_permission_rationale_settings">Ajustes</string>
    <string name="sb_customer_settings_title">Ajustes</string>
    <string name="sb_customer_settings_subtitle">ACERCA DE</string>
    <string name="sb_customer_settings_help_content_title">Ayuda</string>
    <string name="sb_customer_settings_main_starbucks_title">Ir a Starbucks.pe</string>
    <string name="sb_customer_settings_terms_of_use_title">Términos de uso</string>
    <string name="sb_customer_settings_privacy_policy_title">Política de privacidad</string>
    <string name="sb_customer_benefits_sign_in_button">Ingresar</string>
    <string name="sb_sign_in_forgot_pss_text">¿Olvidaste tu contraseña?</string>
    <string name="sb_sign_in_email_text">Correo electrónico</string>
    <string name="sb_forgot_pass_text_info">Ingresa la dirección de correo con la que te registraste en Starbucks Rewards.</string>
    <string name="sb_customer_sing_in">Inicia sesión</string>
    <string name="sb_forgot_password">Restablecer contraseña</string>
    <string name="sb_card_text_description">Obtén una tarjeta digital después de unirte al programa, o registra la Starbucks Card que ya tienes.</string>
</resources>