<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_toolbar_options"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:background="@android:color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@android:color/white"
            app:layout_scrollFlags="scroll">

            <TextView
                android:id="@+id/textView_home_title"
                style="@style/SbAppLabels_Title_H1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:layout_marginStart="@dimen/sb_app_spacing_normal"
                android:layout_marginEnd="@dimen/sb_app_spacing_normal"
                android:maxLines="2"
                android:gravity="center_vertical" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/white">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_history"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_sign_in"
                    style="@style/SbAppButtons_TextButton_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sb_app_spacing_normal"
                    android:text="@string/sb_customer_sign_in_button"
                    app:icon="@drawable/sb_app_ic_sign_in"
                    app:iconTint="@color/sb_gray_icons" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_inbox"
                    style="@style/SbAppButtons_TextButton_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sb_app_spacing_normal"
                    android:text="@string/sb_customer_inbox_button"
                    app:icon="@drawable/ic_inbox"
                    app:iconTint="@color/sb_gray_icons" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_stores"
                    style="@style/SbAppButtons_TextButton_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sb_customer_stores_button"
                    app:icon="@drawable/ic_stores_location"
                    app:iconTint="@color/sb_gray_icons" />
            </androidx.appcompat.widget.LinearLayoutCompat>



            <ImageView
                android:id="@+id/imageView_badge"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="18dp"
                android:src="@drawable/sb_app_ic_badge_inbox"
                android:contentDescription="@null"
                android:visibility="gone" />



            <androidx.appcompat.widget.AppCompatImageButton
                style="@style/SbAppButtons_ImageButton"
                android:id="@+id/button_settings"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/sb_app_spacing_normal"
                android:src="@drawable/sb_app_ic_settings_toolbar"
                android:contentDescription="@null"
                app:tint="@color/sb_gray_icons"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/button_history"
                style="@style/SbAppButtons_TextButton_Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_history"
                android:text="@string/sb_customer_stores_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_profile"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/button_profile"
                style="@style/SbAppButtons_TextButton_Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_account_circle"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

</layout>